<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.julie.budman.BudgetActivity"
    tools:showIn="@layout/activity_budget">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100px"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.julie.budman.BudgetActivity"
        tools:showIn="@layout/activity_budget">

        <EditText
            android:id="@+id/add_expense"
            android:inputType="numberDecimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50px"
            android:hint="@string/new_expense"
            android:layout_gravity="center_horizontal" />

        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button_ok"
            android:layout_weight="1"
            android:onClick="addExpense"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/today_expense"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.julie.budman.BudgetActivity"
    tools:showIn="@layout/activity_budget">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30px"
            android:text="@string/today"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/today_expense_sum"/>

        <ProgressBar
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="50px"
            android:layout_marginLeft="100px"
            android:layout_marginRight="100px"
            android:layout_marginBottom="20px"
            android:id="@+id/day_progress_bar"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/week_expense"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.julie.budman.BudgetActivity"
        tools:showIn="@layout/activity_budget">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10px"
            android:text="@string/week"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10px"
            android:id="@+id/week_expense_sum"/>

        <ProgressBar
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="50px"
            android:layout_marginLeft="100px"
            android:layout_marginRight="100px"
            android:layout_marginBottom="20px"
            android:id="@+id/week_progress_bar"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/month_expense"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.julie.budman.BudgetActivity"
        tools:showIn="@layout/activity_budget">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30px"
            android:text="@string/month"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/month_expense_sum"/>

        <ProgressBar
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="50px"
            android:layout_marginLeft="100px"
            android:layout_marginRight="100px"
            android:layout_marginBottom="20px"
            android:id="@+id/month_progress_bar"
            android:layout_gravity="center_horizontal"/>



    </LinearLayout>
</LinearLayout>
